fix: homepage spacing projects and posts

--- a/src/components/home-projects/home-projects.css
+++ b/src/components/home-projects/home-projects.css
@@ -31,11 +31,11 @@
 
 @screen lg {
   .projects {
-    @apply p-5;
+    @apply;
   }
  
   .projects ul li {
-    max-width: calc(50% - var(--gap) * 2);    
+    max-width: calc(50% - var(--gap) / 2);    
   }
 
   .projects ul li:nth-child(odd) {
